--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,4 +1,130 @@
 <% layout("/layouts/boilerplate") %>
+
+<script>
+  const listing = <%- JSON.stringify(listing) %>;
+  const mapToken = "<%= process.env.MAP_TOKEN %>";
+</script>
+
+<div class="container mt-4">
+
+  <!-- Title -->
+  <div class="row mb-3">
+    <div class="col-12 text-center">
+      <h3><%= listing.title %></h3>
+    </div>
+  </div>
+
+  <!-- Listing Card -->
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-10 col-lg-8">
+      <div class="card show-card listing-card">
+        <img src="<%= listing.image.url %>" 
+             class="card-img-top img-fluid rounded show-img"
+             alt="listing_image">
+
+        <div class="card-body">
+          <p class="card-text">Owned by <i><%= listing.owner.username %></i></p>
+          <p class="card-text"><%= listing.description %></p>
+          <p class="card-text">&#8377; <%= listing.price.toLocaleString("en-IN") %></p>
+          <p class="card-text"><%= listing.location %>, <%= listing.country %></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Edit / Delete -->
+  <% if(currUser && listing.owner._id.equals(currUser._id)) { %>
+    <div class="row mt-3 text-center">
+      <div class="col-12">
+        <a href="/listings/<%= listing._id %>/edit"
+           class="btn btn-dark me-2">Edit</a>
+
+        <form method="POST"
+              action="/listings/<%= listing._id %>?_method=DELETE"
+              class="d-inline">
+          <button class="btn btn-danger">Delete</button>
+        </form>
+      </div>
+    </div>
+  <% } %>
+
+  <!-- Reviews -->
+  <div class="row mt-5">
+    <div class="col-12 col-md-10 col-lg-8 mx-auto">
+
+      <% if(currUser) { %>
+        <h4>Leave a Review</h4>
+        <form action="/listings/<%= listing._id %>/reviews"
+              method="POST"
+              novalidate
+              class="needs-validation">
+
+          <div class="mb-3">
+            <label class="form-label">Rating</label>
+            <fieldset class="starability-slot">
+              <!-- stars unchanged -->
+            </fieldset>
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label">Comments</label>
+            <textarea name="review[comment]"
+                      class="form-control"
+                      rows="4"
+                      required></textarea>
+            <div class="invalid-feedback">
+              Please add some comments for review
+            </div>
+          </div>
+
+          <button class="btn btn-outline-dark">Submit</button>
+        </form>
+        <hr/>
+      <% } %>
+
+      <!-- All Reviews -->
+      <% if(listing.reviews.length > 0) { %>
+        <h5 class="mb-3">All Reviews</h5>
+
+        <div class="row">
+          <% for(review of listing.reviews) { %>
+            <div class="col-12 col-md-6 mb-3">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h6 class="card-title"><%= review.author.username %></h6>
+                  <p class="starability-result"
+                     data-rating="<%= review.rating %>"></p>
+                  <p class="card-text"><%= review.comment %></p>
+                </div>
+
+                <form method="POST"
+                      action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
+                      class="text-center mb-2">
+                  <button class="btn btn-sm btn-dark">Delete</button>
+                </form>
+              </div>
+            </div>
+          <% } %>
+        </div>
+      <% } %>
+    </div>
+  </div>
+
+  <!-- Map -->
+  <div class="row mt-5">
+    <div class="col-12 col-md-10 col-lg-8 mx-auto">
+      <h4>Where you'll be</h4>
+      <div id="map" style="height: 300px;" class="rounded"></div>
+    </div>
+  </div>
+
+</div>
+
+<script src="/js/map.js"></script>
+
+
+
+<!-- <% layout("/layouts/boilerplate") %>
 <script>
     const listing=<%-JSON.stringify(listing)%>;
     const mapToken = "<%= process.env.MAP_TOKEN %>";
@@ -39,10 +165,7 @@
         <hr/>
     <h4>Leave a Review</h4>
     <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation">
-        <!-- <div class="mb-3 mt-3">
-            <label for="rating" class="form-label">Rating</label>
-            <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
-            </div> -->
+
             <div class="mb-3 mt-3">
             <label for="rating" class="form-label">Rating</label>
 
@@ -72,11 +195,6 @@
 <% } %>
 
 
-    <!-- <ul>
-        <% for(review of listing.reviews) {%>
-            <li><%= review.comment %>, <%= review.rating %> stars</li>
-        <% } %>
-    </ul> -->
    
    <% if(listing.reviews.length>0) { %>
     <div class="row">
@@ -89,7 +207,6 @@
                  <p class="starability-result card-text" data-rating="<%= review.rating %>">
                 </p>
                 <p class="card-text"><%= review.comment %></p>
-                <!-- <p class="card-text"><%= review.rating %></p> -->
                 
             </div>
             <form class="mb-3" method="POST" action="/listings/<%= listing._id%>/reviews/<%= review._id%>?_method=DELETE">
@@ -98,7 +215,6 @@
         </div>
        
     <% } %>
-   <!-- </div> -->
        <% } %>
    <div class="col-6 offset-1 mb-3">
     <h3>Where you'll be</h3>
@@ -109,4 +225,4 @@
 
 
 
-<script src="/js/map.js"></script>
+<script src="/js/map.js"></script> -->
