Changes made for responsiveness

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,6 +52,7 @@ body{
     background-color: #ebebeb;
     display: flex;
     flex-wrap: wrap;
+    margin-top:auto;
     /* flex-direction: column; */
     justify-content:center;
     align-items:space-evenly;
