--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -16,7 +16,7 @@
 
   <!-- Listing Card -->
   <div class="row justify-content-center">
-    <div class="col-12 col-md-10 col-lg-8">
+    <div class="col-12 col-sm-6 col-lg-8 mx-auto">
       <div class="card show-card listing-card">
         <img src="<%= listing.image.url %>" 
              class="card-img-top img-fluid rounded show-img"
@@ -112,7 +112,7 @@
 
   <!-- Map -->
   <div class="row mt-5">
-    <div class="col-12 col-md-10 col-lg-8 mx-auto">
+    <div class="col-12 col-md-10 col-lg-8 ">
       <h4>Where you'll be</h4>
       <div id="map" style="height: 300px;" class="rounded"></div>
     </div>
