--- a/public/css/style.css
+++ b/public/css/style.css
@@ -133,3 +133,14 @@ body{
     height: 400px;
     width:80vh;
  }
+
+ .home-hero {
+  height: 90vh;
+  background: linear-gradient(
+      rgba(0, 0, 0, 0.55),
+      rgba(0, 0, 0, 0.55)
+    ),
+    url("https://images.unsplash.com/photo-1501785888041-af3ef285b470");
+  background-size: cover;
+  background-position: center;
+}
