deleted home.ejs and index.ejs

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,3 +1,90 @@
+<!-- <style>
+  .search-btn {
+    background-color: red;
+    color: #fff;
+    border-radius: 25px;
+    padding: 0.5rem 1rem;
+    white-space: nowrap;
+    flex-shrink: 0;
+  }
+  .search-btn:hover {
+    background-color: #cc0000;
+    color: #fff;
+  }
+  .search-btn i {
+    display: inline;
+    margin-right: 0.5rem;
+  }
+  .search-input {
+    border-radius: 25px;
+    padding: 0.5rem 2.5rem 0.5rem 1.5rem;
+    font-size: 1rem;
+    flex-grow: 1;
+    min-width: 0; /* Prevents flex item overflow */
+  }
+  /* Mobile: Stack search vertically below toggle */
+  @media (max-width: 991.98px) {
+    .navbar-nav .search-form {
+      margin-top: 0.5rem;
+      width: 100%;
+    }
+    .search-input {
+      margin-bottom: 0.5rem;
+      width: 100%;
+    }
+    .search-btn {
+      width: 100%;
+    }
+  }
+  /* Extra small screens: Compact padding */
+  @media (max-width: 575.98px) {
+    .search-input {
+      padding: 0.4rem 2rem 0.4rem 1rem;
+      font-size: 0.95rem;
+    }
+    .search-btn {
+      padding: 0.4rem 1rem;
+      font-size: 0.95rem;
+    }
+  }
+</style> -->
+
+<!-- <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link" href="/listings">Explore</a>
+      </div>
+      
+      Search form: Responsive with flex on desktop, stacked on mobile
+      <div class="navbar-nav ms-auto d-md-flex">
+        <form class="d-flex search-form w-100 w-md-auto">
+          <input class="form-control me-2 me-md-2 search-input" type="search" placeholder="Search destinations">
+          <button class="btn search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
+        </form>
+      </div>
+      
+      Auth links: Keep ms-auto for right alignment
+      <div class="navbar-nav ms-md-auto mt-md-0 mt-3">
+        <a class="nav-link" href="/listings/new">Airbnb your home</a>
+        <% if(!currUser) { %>
+          <a class="nav-link" href="/signup"><b>Sign up</b></a>
+          <a class="nav-link" href="/login"><b>Log in</b></a>
+        <% } %>
+        <% if(currUser){ %>
+          <a class="nav-link" href="/logout"><b>Log out</b></a>
+        <% } %>
+      </div>
+    </div>
+  </div>
+</nav> -->
+
+
+
 <style>
   .search-btn{
     background-color: red;
@@ -49,4 +136,4 @@
       </div>
     </div>
   </div>
-</nav>
+</nav> 
