--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -33,7 +33,7 @@
 </body>
 </html>
 
-<script>
+<!-- <script>
 (() => {
   'use strict'
   const forms = document.querySelectorAll('.needs-validation')
@@ -47,4 +47,4 @@
     }, false)
   })
 })()
-</script>
+</script> -->
